force-app/main/default/objects/Project_Resource__c/fields/Estimated_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Payment__c</fullName>
    <formula>Hours_Assigned_Resource__c *  Resource__r.Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>