force-app/main/default/objects/Project_Resource__c/fields/Hours_Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Hours_Assigned_Resource__c</fullName>
    <label>Hours Assigned Resource</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>