force-app/main/default/objects/Project_Resource__c/fields/Missing_Hours__c.field-meta.xml
<CustomField>
    <fullName>Missing_Hours__c</fullName>
    <formula>Hours_Assigned_Resource__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>