force-app/main/default/objects/Project_Resource__c/fields/Total_Estimated_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Pay__c</fullName>
    <formula>Hours_Assigned_Resource__c  *  Resource__r.Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>