force-app/main/default/objects/Project_Resource__c/fields/Total_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_Pay__c</fullName>
    <formula>Worked_Hours__c  * $User.Rate_Hourly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>