force-app/main/default/objects/Project_Resource__c/fields/Total_Real_Pay_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Real_Pay_2__c</fullName>
    <label>Total Real Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>