force-app/main/default/objects/Project_Resource__c/fields/Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>Worked_Hours__c</fullName>
    <label>Worked Hours</label>
    <summarizedField>Task__c.Worked_Hours__c</summarizedField>
    <summaryForeignKey>Task__c.Project_Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>