force-app/main/default/objects/Project_Resource__c/validationRules/Date_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_End</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Date_End__c &lt; Date_Start__c , Date_End__c &gt; Project__r.Date_End__c)</errorConditionFormula>
    <errorMessage>Resources can&apos;t be allocated outside the project date range</errorMessage>
</ValidationRule>