force-app/main/default/objects/Project_Resource__c/validationRules/Date_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Start</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Date_Start__c &gt; Date_End__c , Date_Start__c &lt; Project__r.Date_Start__c)</errorConditionFormula>
    <errorMessage>Resources can&apos;t be allocated outside the project date range</errorMessage>
</ValidationRule>