force-app/main/default/objects/Project_Resource__c/validationRules/Editing_Project_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>Editing_Project_Resource</fullName>
    <active>true</active>
    <description>Check the Project&apos;s status before allowing to edit fields. Can only be edited if the status is Pre-Kickoff.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Project__r.Status__c, &quot;In Progress&quot;),
NOT(ISNEW()),
OR(
ISCHANGED(Resource__c),
ISCHANGED(Date_End__c),
ISCHANGED(Date_Start__c),
ISCHANGED(Hours_Assigned_Resource__c),
ISCHANGED(Total_Estimated_Pay__c),
ISCHANGED(Project__c),
ISCHANGED(Name)
)
)</errorConditionFormula>
    <errorMessage>Project Resource details can&apos;t be edited once they enter In-Progress stage.</errorMessage>
</ValidationRule>